second corecction homework 1.3

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <!-- quinta seccion -->
         <footer>
-            <a href="">WebStudio</a>
+            <p>WebStudio</p>
             <address>
                 <ul>    
                     <li><h6>Calz. Ticomán 500, ciudad de</h6></li>
